<resources>
    <string name="app_name">"Drivool Attendance "</string>
    <string name="attendance">Attendance</string>
    <string name="startTrip">Start Trip</string>
    <string name="pickup">Pick Up a student first</string>
    <string name="sendsms">Send Sms</string>
    <string name="tripfinish">Finish Trip</string>
    <string name="no">1000</string>
    <string name="presentcount">Present Count</string>
    <string name="totalcount">Total Count</string>
    <string name="endtrip">End Trip</string>
    <string name="imageContentInfo">image</string>
    <string name="imageContentError">imageError</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="done">Trip Complete</string>
    <string name="changeph">Chanege Phone No</string>
    <string name="search">Search</string>
    <string name="phoneno">Phone No</string>
    <string name="make">Create Fake Student List</string>
    <string name="servicedescription">Sends sms to parents</string>
    <string name="trip">Trip Started</string>
    <string name="notificationId">1526</string>
    <string name="startime">Start Time</string>
    <string name="edntime">End Time</string>
    <string name="total">Total Students</string>
    <string name="present">Total Present</string>
    <string name="absent">Total Absent</string>
    <string name="tripsummary">Trip Summary</string>
    <string name="setting">Settings</string>
    <string name="prefCatUrl">Urls</string>


    <!-- navItems-->
    <string name="navList">Attendance</string>
    <string name="navHistory">History</string>
    <string name="navSetting">Settings</string>
    <string name="navTestMode">Test Mode</string>
    <!-- -->

    <!-- urls-->
    <string name="serverBaseUrl">http://isirs.org/</string>
    <string name="serverExtraParams">/bus_tracking_ws/student_data.php</string>
    <string name="smsBaseUrl">http://59.162.167.52/</string>
    <string name="smsExtraUrl">/api/MessageCompose?admin=dsouzaronald@gmail.com&amp;user=principal@campionmumbai.org:M2L9V7B&amp;senderID=CAMPMU</string>
    <!-- -->

    <!-- prefTitle-->
    <string name="prefServerBaseUrl">BaseUrl</string>
    <string name="prefServerExtraUrl">Extra Params</string>

    <string name="prefSmsBaseUrl">Sms BaseUrl</string>
    <string name="prefSmsExtraUrl">Sms Extra Params</string>
    <!-- -->

    <!-- prefKey-->
    <string name="prefServerBaseKey">baseKey</string>
    <string name="prefServerExtraKey">baseExKey</string>

    <string name="prefSmsBaseKey">smsKey</string>
    <string name="prefSmsExtraKey">smsExKey</string>
    <!-- -->


    <!-- prefKey-->
    <string name="prefKeyPhoneNo">prefkyphne</string>
    <string name="prefCurrentSes">prefSsId</string>
    <string name="prefTripStatus">prefTrpSt</string>
    <!-- -->

    <!-- intentKey-->
    <string name="intentKeyMessage">intentMessage</string>
    <string name="intentkeyPhoneNo">intentNo</string>
    <string name="intentKeySessionId">intentSession</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- -->

    <!-- urls-->
    <string name="urlBaseUrl">http://isirs.org/bus_tracking_ws/student_data.php</string>
    <string name="urlLocationUrl">https://maps.google.com/?ll=</string>
    <!-- -->

</resources>