<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/verticalLinearLayout"
    tools:context="com.nrs.nsnik.drivoolattendance.TripSummaryActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/tripToolbar"/>

    <android.support.v7.widget.CardView
        style="@style/stretchedVertically"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="8dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout style="@style/verticalLinearLayout">

            <TextView
                style="@style/stretchedVertically"
                android:textSize="18sp"
                android:id="@+id/summaryStartTime"
                android:textStyle="bold"
                android:fontFamily="sans-serif-thin"
                android:padding="@dimen/sixteen"
                android:text="@string/startime" />

            <TextView
                style="@style/stretchedVertically"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/summaryEndTime"
                android:fontFamily="sans-serif-thin"
                android:padding="@dimen/sixteen"
                android:text="@string/edntime" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/stretchedVertically"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="8dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout style="@style/verticalLinearLayout">

            <TextView
                style="@style/stretchedVertically"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/summaryTotalStudent"
                android:fontFamily="sans-serif-thin"
                android:padding="@dimen/sixteen"
                android:text="@string/total" />

            <TextView
                style="@style/stretchedVertically"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/summaryTotalPresent"
                android:fontFamily="sans-serif-thin"
                android:padding="@dimen/sixteen"
                android:text="@string/present" />

            <TextView
                style="@style/stretchedVertically"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/summaryTotalAbsent"
                android:fontFamily="sans-serif-thin"
                android:padding="@dimen/sixteen"
                android:text="@string/absent" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
